[gd_scene load_steps=4 format=3 uid="uid://dg2ei2y8d0mwy"]

[ext_resource type="Script" uid="uid://cwfoen3tp1da6" path="res://8_th_boss.gd" id="1_mmh2d"]
[ext_resource type="Texture2D" uid="uid://cko2dalhk7c6s" path="res://textures/bosses/proxy-image.png" id="2_di4kq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e2viu"]
radius = 101.02

[node name="8th boss" type="Node2D"]
script = ExtResource("1_mmh2d")
metadata/_edit_horizontal_guides_ = [-40.0]
metadata/_edit_vertical_guides_ = [42.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_di4kq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 2)
shape = SubResource("CircleShape2D_e2viu")

[node name="atack_start_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="rotating attack timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="atack_start_timer" to="." method="_on_atack_start_timer_timeout"]
[connection signal="timeout" from="rotating attack timer" to="." method="_on_rotating_attack_timer_timeout"]
